6964: [Agent] Automatically open base module for accessing Unsafe on JDK 11+
Reviewed-by: hirt