@@ -130,7 +130,7 @@
 						<goal>verify</goal>
 					</goals>
 						<configuration>
-							<argLine> -Djava.security.manager -Djava.security.policy=target/test-classes/org/openjdk/jmc/agent/test/failing_control_permission.policy --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+							<argLine> -Djava.security.manager -Djava.security.policy=target/test-classes/org/openjdk/jmc/agent/test/failing_control_permission.policy
 								-XX:+FlightRecorder -javaagent:target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_template.xml
 								 -cp target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar:target/test-classes/ </argLine>
 							<includes>TestPermissionChecks.java</includes>
@@ -143,7 +143,7 @@
               				<goal>verify</goal>
             			</goals>
 						<configuration>
-							<argLine> --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+							<argLine>
 								-XX:+FlightRecorder -javaagent:target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_template.xml
 								 -cp target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar:target/test-classes/ </argLine>
 							<includes>TestDefineEventProbes.java</includes>
@@ -156,7 +156,7 @@
 							<goal>verify</goal>
 						</goals>
 						<configuration>
-							<argLine> --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+							<argLine>
 								-XX:+FlightRecorder -javaagent:target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_simple_2.xml
 								 -cp target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar:target/test-classes/ </argLine>
 							<includes>TestCustomClassloader.java</includes>
@@ -169,7 +169,7 @@
 							<goal>verify</goal>
 						</goals>
 						<configuration>
-							<argLine> --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+							<argLine>
 								-XX:+FlightRecorder -javaagent:target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar
 								 -cp target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar:target/test-classes/ </argLine>
 							<includes>TestRetrieveEventProbes.java</includes>
@@ -182,7 +182,7 @@
 							<goal>verify</goal>
 						</goals>
 						<configuration>
-							<argLine> --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+							<argLine>
 								-XX:+FlightRecorder -javaagent:target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar=target/test-classes/org/openjdk/jmc/agent/test/jfrprobes_simple.xml
 								 -cp target/org.openjdk.jmc.agent-1.0.0-SNAPSHOT.jar:target/test-classes/ </argLine>
 							<includes>TestRetrieveCurrentTransforms.java</includes>
